# DatabaseProjectFinalAssignment

./: docker-compose.yaml
app/: app.py  evadidos.py  pyproject.toml
app/files/: dadosabertos_graduacao_processos_seletivos.csv
database/: dockerfile  initial_tables.sql
