[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Leonardo Bilhalva <leobbbilhalva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.20"
matplotlib = "^3.7.3"
pandas = "^2.1.0"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
